[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-sentry"
version = "3.1.0"
description = "Arc Sentry v3.0.1 — prompt injection detection for LLMs. 100% detection, 0% false positives across Mistral 7B, Qwen 2.5 7B, Llama 3.1 8B. Geometric detection via Fisher-Rao manifold (Nine 2026)."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Hannah Nine", email = "9hannahnine@gmail.com"}
]
keywords = ["llm", "security", "prompt injection", "ai safety", "monitoring"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
dependencies = [
  "numpy>=1.21",
  "torch>=1.10",
  "transformers>=4.20",
  "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://bendexgeometry.com/sentry"
Repository = "https://github.com/9hannahnine-jpg/arc-sentry"

[tool.setuptools.packages.find]
include = ["arc_sentry"]
