[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-sentry"
version = "3.2.2"
description = "Whitebox prompt injection detector for self-hosted open-weight LLMs. Deployment-specific behavioral monitor; calibrates on your traffic, detects drift from the calibrated regime. 92% detection at 0% false positive rate on calibrated benchmarks. Validated on Mistral 7B, Qwen 2.5 7B, Llama 3.1 8B."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-later"}
authors = [
  {name = "Hannah Nine", email = "9hannahnine@gmail.com"}
]
keywords = ["llm", "security", "prompt injection", "ai safety", "monitoring", "self-hosted"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
dependencies = [
  "numpy>=1.21",
  "torch>=1.10",
  "transformers>=4.20",
  "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://bendexgeometry.com/sentry"
Repository = "https://github.com/9hannahnine-jpg/arc-sentry"

[tool.setuptools.packages.find]
include = ["arc_sentry"]
